fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,8 @@ body {
 
 .tooltip {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
 }
 
 .tooltip .tooltiptext {
